--- a/aria2c.conf
+++ b/aria2c.conf
@@ -37,14 +37,16 @@ http-no-cache=true
 bt-enable-lpd=true
 bt-max-peers=80
 bt-require-crypto=true
+bt-min-crypto-level=arc4
 follow-torrent=true
 listen-port=6881-6999
+bt-request-peer-speed-limit=256K
 bt-hash-check-seed=true
 bt-seed-unverified=true
 bt-save-metadata=true
 enable-dht=true
 enable-peer-exchange=true
 user-agent=uTorrent/2210(25130)
-peer-id-prefix=-UT2210-
+#peer-id-prefix=-UT2210-
 #seed-ratio=0
-#bt-tracker=<URI>,¡­
+#bt-tracker=<URI>,â€¦
