--- a/aria2c.conf
+++ b/aria2c.conf
@@ -6,7 +6,7 @@ log-level=error
 
 # Advanced Options
 disable-ipv6=true
-file-allocation=falloc
+file-allocation=none
 max-download-result=120
 
 # RPC Options
